apps/gitea/ssh-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ssh-lb
  namespace: gitea
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gitea.thecluster.lan
    metallb.io/loadBalancerIPs: 192.168.1.43
    metallb.io/allow-shared-ip: lan-gateway
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster # https://metallb.io/usage/#ip-address-sharing
  selector:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
  ports:
    - name: ssh
      protocol: TCP
      port: 22
      targetPort: 22
